@@ -1,3 +1,4 @@
+- cparm : Fixed a buffer overflow in the plist loader
 - cparm : Ported the nvidia plist helper (less time to spend on the device id more time to code :-) )
 - cparm : Added a Sata module, known as YellowIconFixer in my branch, useful to fix yellow icon issue (can also fix an issue with the apple's dvd player application in moutain lion)
   , for now not added in the pkg script !!! 
